fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,5 +8,6 @@
     html, body {
         font-family: 'Roboto', sans-serif !important;
         width: 100vw !important;
+        overflow-x: hidden !important;
     }
   }
